--- a/src/Components/Merchandise/merchandise2.css
+++ b/src/Components/Merchandise/merchandise2.css
@@ -4,6 +4,15 @@
     margin: 0;
 }
 
+.merchandise-background {
+	position:fixed;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	z-index:-1;
+}
+
 .merchandise{
     height: calc("100vh - 100px");
     height: 81.6vh;
